UCF-APR2.4/ftr main/force-app/main/default/objects/MDIAAddons__mdt/MDIAAddons__mdt.object-meta.xml
<CustomObject>
    <label>MDIAAddons</label>
    <pluralLabel>MDIAAddons</pluralLabel>
</CustomObject>