UCF-APR2.4/ftr main/force-app/main/default/objects/MDIAAddons__mdt/fields/Child_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Child_Product_Code__c</fullName>
    <label>Child Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>