UCF-APR2.4/ftr main/force-app/main/default/objects/MDIAAddons__mdt/fields/Main_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Main_Product_Code__c</fullName>
    <label>Main Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>