UCF-APR2.4/ftr main/force-app/main/default/objects/MDIAAddons__mdt/fields/Main_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Product_Name__c</fullName>
    <label>Main Product Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>