UCF-APR2.4/ftr main/force-app/main/default/objects/MDIAAddons__mdt/fields/productTerm__c.field-meta.xml
<CustomField>
    <fullName>productTerm__c</fullName>
    <label>productTerm</label>
    <length>20</length>
    <type>Text</type>
</CustomField>