UCF-APR2.4/ftr main/force-app/main/default/objects/MDIAAddons__mdt/fields/SelectedAddOns__c.field-meta.xml
<CustomField>
    <fullName>SelectedAddOns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SelectedAddOns</label>
    <type>Checkbox</type>
</CustomField>